# tree-sitter-test

./: .editorconfig  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml  publish.yml
bindings/c/: tree-sitter-test.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_test/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterTestTests/: TreeSitterTestTests.swift
examples/: cst.test
ftdetect/: tstest.vim
ftplugin/: test.lua  tstest.lua
plugin/: tstest.lua
queries/: highlights.scm  injections.scm
queries/test/: highlights.scm  injections.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: platform.txt  simple.txt
